--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
 
   <body>
-    <!-- Boom box -->
+    <!-- Boom box + drop zones -->
     <section class="boom_box">
       <h2 class="hidden">Boombox</h2>
 		  <div class="drop-zone tl"></div>
@@ -23,6 +23,7 @@
       <div class="drop-zone br"></div>
     </section>
 
+    <!-- cassettes icons containers -->
     <section class="parent_container">
       <h2 class="hidden">Audio Cassettes</h2>
       <div class="container_tl">
@@ -52,6 +53,36 @@
         <img id="skyRT" src="images/sky-right-top.svg" alt="Sky right top cassette">
         <img id="yellowRT" src="images/yellow-right-top.svg" alt="Yellow right top cassette">
       </div>
+    </section>
+
+<!-- audio files -->
+    <section>
+      <h2 class="hidden">Audio files 2</h2>
+      <div>
+        <audio class="audio11" loop src="audio/drum_beats/80s_back_beat_01.mp3"></audio>
+        <audio class="audio12" loop src="audio/drum_beats/ambition_beat.1.mp3"></audio>
+        <audio class="audio13" loop src="audio/drum_beats/big_room_snare_break.1.mp3"></audio>
+        <audio class="audio14" loop src="audio/drum_beats/tremor_beat.02.2.mp3"></audio>
+      </div>
+      <div>
+        <audio class="audio21" loop src="audio/hi-hat/free_fall_hi-hats.1.mp3"></audio>
+        <audio class="audio22" loop src="audio/hi-hat/glitter_night_hi-hat_topper.1.mp3"></audio>
+        <audio class="audio23" loop src="audio/hi-hat/hang_tight_hi-hat_topper.1.mp3"></audio>
+        <audio class="audio24" loop src="audio/hi-hat/hi-hat.1.mp3"></audio>
+      </div>
+      <div>
+        <audio class="audio31" loop src="audio/melody/pop_beaquty_piano.1.mp3"></audio>
+        <audio class="audio32" loop src="audio/melody/sky_lounge_electric.mp3"></audio>
+        <audio class="audio33" loop src="audio/melody/two_hand.mp3"></audio>
+        <audio class="audio34" loop src="audio/melody/uptown_club_guitar.mp3"></audio>
+      </div>
+      <div>
+        <audio class="audio41" loop src="audio/synth/afterburner_synth_lead.1.mp3"></audio>
+        <audio class="audio42" loop src="audio/synth/airy_vox_synth.1.mp3"></audio>
+        <audio class="audio43" loop src="audio/synth/colossus_chord_stabs_02.1.mp3"></audio>
+        <audio class="audio44" loop src="audio/synth/transmission_layers.mp3"></audio>
+      </div>
+
     </section>
   <script src="js/app.js"></script>
   </body>
